--- a/UserDefault/UserDefault/Base.lproj/Main.storyboard
+++ b/UserDefault/UserDefault/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="E0F-Xw-2Sb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0G2-81-g3h">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -14,7 +14,7 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UserDefault" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HoroscopeDetailViewController" customModule="UserDefault" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -49,38 +49,46 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Horoscope" id="fgk-ak-JDS">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="AO2-Vp-KIT">
-                            <connections>
-                                <segue destination="bCV-gW-c3R" kind="show" id="IOV-ud-0Dg"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Horoscope" id="fgk-ak-JDS"/>
+                    <connections>
+                        <outlet property="fortune" destination="6qs-gh-BkZ" id="uIF-bo-tBc"/>
+                        <outlet property="image" destination="Qmn-q3-cYU" id="Sck-Q3-mMb"/>
+                        <outlet property="keywords" destination="GQF-xg-ZJk" id="hPl-gN-SZN"/>
+                        <outlet property="sign" destination="tF5-i1-rzk" id="r14-xs-YVg"/>
+                    </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="852.17391304347836" y="112.5"/>
+            <point key="canvasLocation" x="2600" y="112.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="1eM-lf-Z9c">
             <objects>
-                <viewController id="bCV-gW-c3R" sceneMemberID="viewController">
+                <viewController id="bCV-gW-c3R" customClass="ViewController" customModule="UserDefault" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pj1-MW-Ryh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="mlO-yq-5zo">
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="mlO-yq-5zo">
                                 <rect key="frame" x="0.0" y="235" width="414" height="216"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="591042464.41239095">
                                     <!--2019-09-24 18:27:44 +0000-->
                                 </date>
+                                <connections>
+                                    <action selector="chosenDate:" destination="bCV-gW-c3R" eventType="valueChanged" id="h3E-Jp-lEW"/>
+                                </connections>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHX-Lw-zd3">
-                                <rect key="frame" x="190" y="624" width="34" height="30"/>
+                                <rect key="frame" x="187" y="623" width="43" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveBDay:" destination="bCV-gW-c3R" eventType="touchUpInside" id="kIa-oo-wlE"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="FKU-cJ-aPj"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIY-Dg-G9T">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Birthday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIY-Dg-G9T">
                                 <rect key="frame" x="20" y="147" width="374" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -91,28 +99,32 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="8So-SL-CD4"/>
                     </view>
+                    <navigationItem key="navigationItem" id="OeJ-QT-5Ri"/>
+                    <connections>
+                        <outlet property="datePicker" destination="mlO-yq-5zo" id="r6u-ca-1bq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vyg-Yu-G78" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1713.0434782608697" y="112.5"/>
+            <point key="canvasLocation" x="1731.8840579710147" y="112.5"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="gND-FT-9bW">
+        <scene sceneID="amU-m7-QC5">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7GB-lG-dd9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E0F-Xw-2Sb" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0G2-81-g3h" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f3z-kD-wn3">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ovT-wg-cvb">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Ut5-bf-vRa"/>
+                        <segue destination="bCV-gW-c3R" kind="relationship" relationship="rootViewController" id="0xf-69-a8J"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="692-Gd-M1m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-74" y="113"/>
+            <point key="canvasLocation" x="821.73913043478262" y="112.5"/>
         </scene>
     </scenes>
 </document>
